# Tele-

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/vps/: install_systemd.sh
src/discord_ai/: __init__.py  config.py  main.py
src/payment_bridge/: __init__.py  config.py  main.py  models.py  store.py  sub2api_client.py
src/tele_ai/: __init__.py  bot_mode.py  config.py  constants.py  formatter.py  lang_detect.py  main.py  state.py  telegram_client.py  utils.py
src/tele_ai/translator/: __init__.py  interface.py  kimi_provider.py  nvidia_provider.py  router.py
tests/: test_bot_mode_lifecycle.py  test_formatter.py  test_main_helpers.py  test_payment_bridge_helpers.py  test_payment_bridge_store.py  test_router.py  test_state.py  test_utils.py
